# schwerpunkt

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.cursor/rules/: phase-completion.mdc
docs/: CONCEPT.md  DEMO-WALKTHROUGH.md  GROK-FEEDBACK.md  GROK-RESEARCH-BRIEF.md  OPERATOR-AND-RUN-MODES.md  TECHNOLOGY-SELECTION.md  architecture.md
features/: human-in-the-loop.feature  runtime-modes.feature
fixtures/: igc_rules.json
fixtures/cognition/contradiction_case/: decide.json  orient.json
fixtures/cognition/default/: decide.json  orient.json
fixtures/scenarios/: contradiction_case.json  default.json  igc_retrieve.json  risk_budget_exhausted.json
openspec/: WORKFLOW.md  config.yaml  project.md
openspec/specs/: README.md
openspec/specs/demo-scenarios/: spec.md
openspec/specs/human-in-the-loop/: spec.md
openspec/specs/mcp-bridge/: spec.md
openspec/specs/ooda-runtime/: spec.md
openspec/specs/operator-console/: spec.md
openspec/specs/orientation-layer/: spec.md
openspec/specs/runtime-modes/: spec.md
scripts/: capture-console-screenshots.py  demo-manual.sh
src/schwerpunkt/: __init__.py  config.py  models.py
src/schwerpunkt/act/: executor.py
src/schwerpunkt/api/: app.py  events.py
tests/: conftest.py
tests/features/: test_hitl_bdd.py  test_runtime_bdd.py
tests/integration/: test_postgres_store.py
tests/unit/: test_api.py  test_contradictions.py  test_executor.py  test_live_cognition.py  test_mcp.py  test_runtime.py  test_sse.py
(+13 files in other folders)
