[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schwerpunkt"
version = "0.1.0"
description = "Orientation-first Boyd OODA loop agent platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "typer>=0.15.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
server = [
  "psycopg[binary]>=3.2.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-bdd>=8.1.0",
  "pytest-asyncio>=0.24.0",
  "playwright>=1.49.0",
  "psycopg[binary]>=3.2.0",
  "testcontainers>=4.9.0",
]

[project.scripts]
schwerpunkt = "schwerpunkt.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/schwerpunkt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "bdd: Gherkin scenarios from OpenSpec",
  "integration: requires Docker (testcontainers)",
]
